--- a/css/creative.css
+++ b/css/creative.css
@@ -10560,13 +10560,9 @@ html {
   height: 100%;
 }
 
-.text-white-75 {
-  color: rgba(255, 255, 255, 0.75);
-}
-
-hr.divider {
-  max-width: 3.25rem;
-  border-width: 0.2rem;
+hr {
+  max-width: 50px;
+  border-width: 3px;
   border-color: #f4623a;
 }
 
@@ -10574,21 +10570,104 @@ hr.light {
   border-color: #fff;
 }
 
-.btn {
-  font-family: "Merriweather Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+a {
+  color: #f4623a;
 }
 
-.btn-xl {
-  padding: 1.25rem 2.25rem;
-  font-size: 0.85rem;
-  font-weight: 700;
-  text-transform: uppercase;
-  border: none;
-  border-radius: 10rem;
+a:hover {
+  color: #f4623a;
 }
 
-.page-section {
+.bg-primary {
+  background-color: #48403e !important;
+}
+
+.bg-dark {
+  background-color: #212529 !important;
+}
+
+.text-faded {
+  color: rgba(255, 255, 255, 0.7);
+}
+
+section {
   padding: 8rem 0;
+}
+
+.section-heading {
+  margin-top: 0;
+}
+
+::selection {
+  color: #fff;
+  background: #212529;
+  text-shadow: none;
+}
+
+img::selection {
+  color: #fff;
+  background: transparent;
+}
+
+img::-moz-selection {
+  color: #fff;
+  background: transparent;
+}
+
+button.rec-btn {
+  width: 35px;
+  height: 35px;
+  font-size: 0;
+  background-color: red;
+  border: 0;
+  border-radius: 35px;
+  margin: 18px;
+  outline: none;
+}
+
+.not-rec {
+  background-color: darkred;
+}
+
+.rec {
+  -webkit-animation-name: pulse;
+  animation-name: pulse;
+  -webkit-animation-duration: 1.5s;
+  animation-duration: 1.5s;
+  -webkit-animation-iteration-count: infinite;
+  animation-iteration-count: infinite;
+  -webkit-animation-timing-function: linear;
+  animation-timing-function: linear;
+}
+
+@-webkit-keyframes pulse {
+  0% {
+    -webkit-box-shadow: 0px 0px 5px 0px rgba(173, 0, 0, 0.3);
+    box-shadow: 0px 0px 5px 0px rgba(173, 0, 0, 0.3);
+  }
+  65% {
+    -webkit-box-shadow: 0px 0px 5px 13px rgba(173, 0, 0, 0.3);
+    box-shadow: 0px 0px 5px 13px rgba(173, 0, 0, 0.3);
+  }
+  90% {
+    -webkit-box-shadow: 0px 0px 5px 13px rgba(173, 0, 0, 0);
+    box-shadow: 0px 0px 5px 13px rgba(173, 0, 0, 0);
+  }
+}
+
+@keyframes pulse {
+  0% {
+    -webkit-box-shadow: 0px 0px 5px 0px rgba(173, 0, 0, 0.3);
+    box-shadow: 0px 0px 5px 0px rgba(173, 0, 0, 0.3);
+  }
+  65% {
+    -webkit-box-shadow: 0px 0px 5px 13px rgba(173, 0, 0, 0.3);
+    box-shadow: 0px 0px 5px 13px rgba(173, 0, 0, 0.3);
+  }
+  90% {
+    -webkit-box-shadow: 0px 0px 5px 13px rgba(173, 0, 0, 0);
+    box-shadow: 0px 0px 5px 13px rgba(173, 0, 0, 0);
+  }
 }
 
 #mainNav {
